# advanced-bug-bounty-hunter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  setup.py
advanced_bug_bounty_hunter/: __init__.py  cli.py  main.py
advanced_bug_bounty_hunter/agents/: __init__.py  base.py  orchestrator.py
advanced_bug_bounty_hunter/agents/base/: communication.py
advanced_bug_bounty_hunter/agents/strategic/: __init__.py  orchestrator.py  reconnaissance.py
advanced_bug_bounty_hunter/core/: __init__.py
advanced_bug_bounty_hunter/core/browser/: __init__.py  browser_context.py  playwright_manager.py  request_interceptor.py
advanced_bug_bounty_hunter/core/config/: __init__.py  config_manager.py  settings.py
advanced_bug_bounty_hunter/core/models/: __init__.py  base.py
advanced_bug_bounty_hunter/core/state/: __init__.py  state_manager.py
advanced_bug_bounty_hunter/utils/: __init__.py  logging.py
config/: default.yaml
scripts/: migrate_db.py
tests/: __init__.py  conftest.py
tests/integration/: test_recon_cli_flow.py
